# quick-rag

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/CFIS/: 01-OVERVIEW.md  02-ARCHITECTURE.md  03-DEPENDENCIES.md  04-EXTERNAL-INTEGRATIONS.md  05-API-DOCUMENTATION.md  06-CODE-ANALYSIS.md  07-SECURITY-REVIEW.md  08-DATA-FLOWS.md  09-MAINTENANCE-NOTES.md  10-EXPLANATION-GUIDE.md  INDEX.txt  README.md
